--- a/package.json
+++ b/package.json
@@ -2,26 +2,35 @@
     "name": "notepadapp-back",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "index.ts",
     "scripts": {
-        "build": "babel src --out-dir dist",
-        "start:dev": "nodemon src/index.js --exec babel-node "
+        "start:dev": "nodemon src/index.ts "
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@types/jsonwebtoken": "^8.5.9",
+        "@types/mongoose": "^5.11.97",
+        "bcrypt": "^5.1.0",
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.0",
         "cors": "^2.8.5",
-        "express": "^4.18.1",
+        "express": "^4.18.2",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.6.3",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "ts-node": "^10.9.1"
     },
     "devDependencies": {
         "@babel/cli": "^7.19.3",
-        "@babel/core": "^7.19.3",
+        "@babel/core": "^7.20.2",
         "@babel/node": "^7.19.1",
         "@babel/preset-env": "^7.19.3",
+        "@types/bcryptjs": "^2.4.2",
+        "@types/cors": "^2.8.12",
+        "@types/express": "^4.17.14",
+        "@types/morgan": "^1.9.3",
         "nodemon": "^2.0.20"
     }
 }
